# training_analysis

./: .env.example  .gitignore  README.md  pyproject.toml
analysis/: __init__.py  ascensional.py  build_taper.py  build_taper_pattern.py  descent_speed.py  efficiency.py  hr_analysis.py  race_compare.py  race_registry.py  utils.py
data/races/: races.json
examples/: analyse_race.py
parsers/: __init__.py  fit_parser.py  garmin_client.py  nolio_client.py  strava_client.py  strava_zip.py
scripts/: best_ascent_speed.py  edit_races.py  efficiency_report.py  generate_html_report.py  pre_race_check.py  race_pattern_report.py  ytd_compare.py
sync/: build_race_registry.py  build_summaries.py  fetch_strava_activity_meta.py  fetch_strava_streams.py  fetch_strava_training.py  sync_garmin.py
tests/: test_parsers.py
