[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sport-analysis"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=2.0",
    "requests>=2.31",
    "python-dotenv>=1.0",
    "fitparse>=1.2",
    "garminconnect>=0.2",
    "garmin-fit-sdk>=21.133",
    "pyarrow>=14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
dashboard = [
    "jinja2>=3.1",
    "plotly>=5.0",
]

[tool.setuptools.packages.find]
include = ["parsers*", "analysis*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
